welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: not found: value p
      p = n+1
      ^Array2:24: error: not found: value p
    	setCouleurBrosse(T(c+p))
                             ^